# SLiCAP_python

./: .gitignore  LICENCE.txt  MANIFEST.in  README.md  SLiCAPtemplate.py  pyproject.toml  requirements.txt  requirements_DOCS.txt  setup.py
.github/workflows/: BuildPackage.yml  BuildSite.yml  README.md  pip.yml  pypi.yml  pypiTEST.yml  pypiTEST_ALL.yml
SLiCAP/: SLiCAP.py  SLiCAPStateSpace.py  SLiCAPconfigure.py  SLiCAPdesignData.py  SLiCAPexecute.py  SLiCAPfc.py  SLiCAPformatter.py  SLiCAPgschem.py  SLiCAPhtml.py  SLiCAPini.py  SLiCAPinstruction.py  SLiCAPkicad.py  SLiCAPlatex.py  SLiCAPlex.py  SLiCAPltspice.py  SLiCAPmath.py  SLiCAPmatrices.py  SLiCAPngspice.py  SLiCAPnotebook.py  SLiCAPplots.py  SLiCAPprotos.py  SLiCAPrst.py  SLiCAPsetting.py  SLiCAPshell.py  SLiCAPstatespace.py  SLiCAPsvgTools.py  SLiCAPyacc.py  __init__.py
SLiCAP/formatting/: __init__.py  latex.py
SLiCAP/schematic/: __init__.py  analysis_dialog.py  analysis_item.py  attribute_dialog.py  border_dialog.py  border_item.py  canvas.py  cli.py  command_item.py  component_item.py  config.py  connectivity.py  create_subcircuit_dialog.py  document_properties_dialog.py  export.py  free_text_item.py  hyperlink_dialog.py  hyperlink_item.py  image_dialog.py  image_item.py  junction_item.py  latex_fragment_dialog.py  latex_fragment_item.py  latex_label.py  library_item.py  library_link_dialog.py  logfile.py  main.py  model_dialog.py  model_item.py  net_label_dialog.py  netlist.py  palette.py  parameter_dialog.py  parameter_item.py  place_subcircuit_dialog.py  place_symbol_dialog.py  power_symbol_dialog.py  preferences_dialog.py  project.py  (+11 more)
docs/: .gitignore  Makefile  Manual.py  SLiCAP.ini  balanced.py  circuit.py  conf.py  dcvar.py  feedback.py  index.rst  laplace.py  latex_report.py  make.bat  math.py  matrix.py  models.py  myFirstRCnetwork.py  ngspice.py  noise.py  parameters.py  plots.py  pz.py  simFile.sp  specifications.py  sphinx_report.py  subcircuits.py  temp.txt  todo.txt  ttime.py
docs/cir/: ACcoupling.cir  BJTdiffAmp.cir  Transimpedance.cir  VampIdeal.cir  VampOV.cir  VampQ.cir  VampQspice.cir  VampQspice.csv  ZtoV.cir  balancedAmp.cir  balancedAmpDCvar.cir  balancedNetwork.cir  balancedNoisyNetwork.cir  dcMatchingTracking.cir  hierarchy.cir  mainAmp.cir  myPassiveNetwork.cir  noiseSources.cir  pzNetwork.cir
docs/csv/: "BJT voltage amplifier".csv  BJT voltage amplifier.csv  specs.csv
docs/development/: SLiCAPdevelopment.rst
docs/html/: ACcoupling_Circuit-data.html  ACcoupling_index.html  BJT-differential-amplifier_Circuit-data.html  BJT-differential-amplifier_index.html  Balanced-Network_Circuit-data.html  Balanced-Network_index.html  Balanced-Noisy-Network_Circuit-data.html  Balanced-Noisy-Network_index.html  Balanced-Vamp_Circuit-data.html  Balanced-Vamp_index.html  Circuit-data.html  DC-matching-and-Tracking_Circuit-data.html  DC-matching-and-Tracking_DC-matching-tacking-demo.html  DC-matching-and-Tracking_index.html  Ideal-voltage-amplifier_Circuit-data.html  (+24 more)
tests/: test_SLiCAPStateSpace.py  test_SLiCAPfc.py
(+680 files in other folders)
