[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SLiCAP"
authors = [
  { name="Anton Montagne", email="anton@montagne.nl" },
]
description = "SLiCAP: more than SYMBOLIC SPICE"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version","readme","license"]

[project.urls]
Homepage = "https://slicap.github.io/SLiCAP_python/"
Issues = "https://github.com/SLiCAP/SLiCAP_python"

[tool.setuptools.dynamic]
version = {attr = "SLiCAP.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = ["README.md"], content-type = "text/markdown"}
