[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SLiCAP"
dependencies = [
    "numpy>=1.26",
    "sympy>=1.12",
    "scipy>=1.12",
    "ply>=3.11",
    "matplotlib>=3.8.0",
    "svgelements>=1.9.6",
    "cairosvg>=2.7.1",
    "IPython>=8.19",
    'windows_tools>=2.4; sys_platform == "win32"',
    'pywin32>306; sys_platform == "win32"',
    ]
authors = [
  { name="Anton Montagne", email="anton@montagne.nl" },
]
description = "SLiCAP: more than SYMBOLIC SPICE"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version","readme","license"]

[project.urls]
Homepage = "https://slicap.github.io/SLiCAP_python/"
Issues = "https://github.com/SLiCAP/SLiCAP_python"

[tool.setuptools.dynamic]
version = {attr = "SLiCAP.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = ["README.md"], content-type = "text/markdown"}

[project.optional-dependencies]
docs  = [
    "docutils>=0.18",
    "sphinx-rtd-theme>=1.2.0",
    ]
