[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SLiCAP"
authors = [
  { name="Anton Montagne", email="anton@montagne.nl" },
]
description = "SLiCAP: more than SYMBOLIC SPICE"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26",
    "sympy>=1.12",
    "scipy>=1.12",
    "ply>=3.11",
    "matplotlib>=3.8.0",
    "svgelements>=1.9.6",
    "svglib>=1.5.1",
    "pytexit>=0.4.0",
    "IPython>=8.19",
    'windows_tools>=2.4; sys_platform == "win32"',
    'pywin32>306; sys_platform == "win32"',
    "docutils>=0.18",
    "sphinx-rtd-theme>=1.2.0",
    ]
dynamic = ["version"]

[project.urls]
Homepage = "https://slicap.github.io/SLiCAP_python/"
Issues = "https://github.com/SLiCAP/SLiCAP_python"

[tool.setuptools.dynamic]
version = {attr = "SLiCAP.__version__"}  # any module attribute compatible with ast.literal_eval

[tool.setuptools]
packages = ["SLiCAP"]
